# per-component-server-trunk-js

./: README.md
.github/workflows/: server-main.yaml
server/: Dockerfile  pyproject.toml
server/server/: main.py  model.py
server/tests/: test_counter.py
